# EXTube

./: .coveragerc  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-demo.yml  deploy.yml
docker/: .env.example  Dockerfile  Dockerfile.gpu  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
docker/alertmanager/: alertmanager.yml
docker/nginx/: nginx.conf
docker/prometheus/: prometheus.yml
docker/redis/: redis.conf
docs/: dense-reconstruction-research.md  deployment.md  monitoring.md  research-auth-strategy.md  research-download-extraction.md  research-gaussian-splatting-viewer.md  research-job-queue.md  research-photogrammetry-pipeline.md  research-pointcloud-lod.md  research-rate-limiting.md  research-spark-v2-integration.md  research-web-3d-viewer.md
docs/intro-video/: README.md  demo-checklist.md  script.md  storyboard.md
scripts/: deploy.sh  validate-prod-config.sh
src/: __main__.py  pipeline.py
src/api/: __init__.py  auth.py  (+11 more)
tests/: conftest.py  test_api.py  test_auth.py  test_db.py  test_downloader.py  test_e2e_auth_flow.py  test_e2e_pipeline.py  test_extractor.py  test_file_serving.py  test_gaussian_splatting.py  test_gpu_semaphore.py  test_integration_flows.py  test_job_validation.py  test_logging_middleware.py  test_pipeline.py  test_queue_manager.py  test_rate_limit.py  test_reconstruction.py  test_retry.py  test_security_headers.py  test_smoke.py  test_stale_jobs.py  test_storage_cleanup.py  test_validate_prod_config.sh  test_ws.py
(+60 files in other folders)
