[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "extube"
version = "0.1.0"
description = "유튜브 영상에서 사진측량 기술로 3D 공간을 복원하는 서비스"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "pydantic-settings>=2.0",
    "uvicorn>=0.27",
    "yt-dlp>=2024.1",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt<4.1",
    "python-multipart>=0.0.5",
    "redis>=5.0",
    "rq>=1.16",
    "prometheus-fastapi-instrumentator>=7.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
gpu = [
    "nerfstudio>=1.1.0",
    "gsplat>=1.5.0",
]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "fakeredis>=2.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "e2e: end-to-end pipeline integration tests",
]
